--- a/model.ipynb
+++ b/model.ipynb
@@ -1,8 +1,18 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/azhgh22/ML04_Facial_Expression_Recognition_Challenge/blob/main/model.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "id": "929b1a95",
       "metadata": {
         "id": "929b1a95",
@@ -36,7 +46,7 @@
         "id": "w_heYIbNS0bI"
       },
       "id": "w_heYIbNS0bI",
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -48,7 +58,7 @@
         "id": "V45TVlo8S3WQ"
       },
       "id": "V45TVlo8S3WQ",
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -60,7 +70,7 @@
         "id": "mL6AdVZES54a"
       },
       "id": "mL6AdVZES54a",
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -76,7 +86,7 @@
         }
       },
       "id": "8eoDdwQFS9Ip",
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -102,7 +112,7 @@
         }
       },
       "id": "dwvrUKTFTcVs",
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -127,7 +137,7 @@
         "id": "gbtze2WITnax"
       },
       "id": "gbtze2WITnax",
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -139,7 +149,7 @@
         "id": "ImZy3oInUqRO"
       },
       "id": "ImZy3oInUqRO",
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -151,7 +161,7 @@
         "id": "mLjjlYylUzkX"
       },
       "id": "mLjjlYylUzkX",
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -190,7 +200,7 @@
         }
       },
       "id": "NKnzbgmPTvVJ",
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -220,7 +230,7 @@
         "id": "BidunNPNVy9L"
       },
       "id": "BidunNPNVy9L",
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -237,7 +247,7 @@
         }
       },
       "id": "l_NsR0b1XIeo",
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -568,7 +578,7 @@
         "id": "zDH0VgqsXKY6"
       },
       "id": "zDH0VgqsXKY6",
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -584,7 +594,7 @@
         }
       },
       "id": "pbsXZ2OGXpdP",
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -611,7 +621,7 @@
         }
       },
       "id": "yykGaMHxXs_j",
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -639,7 +649,7 @@
         }
       },
       "id": "wbxFq79vXxTi",
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -744,7 +754,7 @@
         }
       },
       "id": "cImfr_8Rczy5",
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -868,7 +878,7 @@
         "id": "LEFR8xj1YgFf"
       },
       "id": "LEFR8xj1YgFf",
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -883,7 +893,7 @@
         "id": "Pz9ZH3_-w4wX"
       },
       "id": "Pz9ZH3_-w4wX",
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -897,7 +907,7 @@
         "id": "VxGF52YPw7MF"
       },
       "id": "VxGF52YPw7MF",
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -919,7 +929,7 @@
         }
       },
       "id": "X3yqdi2B0Ztk",
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -965,7 +975,7 @@
         "id": "ENPVKQmDAH9e"
       },
       "id": "ENPVKQmDAH9e",
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -989,7 +999,7 @@
         "id": "G0Gb0lsr_JoU"
       },
       "id": "G0Gb0lsr_JoU",
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1034,7 +1044,7 @@
         "id": "yOF77cedAPOH"
       },
       "id": "yOF77cedAPOH",
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1061,7 +1071,7 @@
         }
       },
       "id": "cqrlZETfCEsi",
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1109,7 +1119,7 @@
         "id": "xBMs7_GbCJV6"
       },
       "id": "xBMs7_GbCJV6",
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1173,7 +1183,7 @@
         }
       },
       "id": "1DXHQjDJM6IO",
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1237,8 +1247,7 @@
         "    test_loss = criterion(predictions, labels)\n",
         "    total_loss_test += test_loss.item()\n",
         "\n",
-        "print(f\"Accuracy Score is: {round((total_acc_test/test_dataset.__len__()) * 100, 4)} and Loss is {round(total_loss_test/1000, 4)}\")\n",
-        ""
+        "print(f\"Accuracy Score is: {round((total_acc_test/test_dataset.__len__()) * 100, 4)} and Loss is {round(total_loss_test/1000, 4)}\")\n"
       ],
       "metadata": {
         "id": "wgEjzh-Of0Xf",
@@ -1248,7 +1257,7 @@
         }
       },
       "id": "wgEjzh-Of0Xf",
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1301,7 +1310,7 @@
         }
       },
       "id": "gIJbQhkDgIY9",
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1332,7 +1341,8 @@
     },
     "colab": {
       "provenance": [],
-      "gpuType": "T4"
+      "gpuType": "T4",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
