--- a/model.ipynb
+++ b/model.ipynb
@@ -2466,6 +2466,105 @@
       "id": "XRpHV8a3uC4j",
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **Ansemble prev models**"
+      ],
+      "metadata": {
+        "id": "rnKBaIvDb5pt"
+      },
+      "id": "rnKBaIvDb5pt"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "run = wandb.init(\n",
+        "    # Set the wandb entity where your project will be logged (generally your team name).\n",
+        "    entity=\"azhgh22-free-university-of-tbilisi-\",\n",
+        "    # Set the wandb project where this run will be logged.\n",
+        "    project=\"Face recognition\",\n",
+        "    # Track hyperparameters and run metadata.\n",
+        ")\n",
+        "\n",
+        "\n",
+        "artifact_path = \"azhgh22-free-university-of-tbilisi-/Face recognition/my-model:latest\"\n",
+        "artifact = run.use_artifact(artifact_path, type=\"model\")\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 104
+        },
+        "id": "-yehXNGOb3DE",
+        "outputId": "de84cfae-bdd5-4ae7-bf94-157c6f2804fa"
+      },
+      "id": "-yehXNGOb3DE",
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "Tracking run with wandb version 0.20.0"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "Run data is saved locally in <code>/content/wandb/run-20250604_193533-lxmyb8t0</code>"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "Syncing run <strong><a href='https://wandb.ai/azhgh22-free-university-of-tbilisi-/Face%20recognition/runs/lxmyb8t0' target=\"_blank\">azure-silence-19</a></strong> to <a href='https://wandb.ai/azhgh22-free-university-of-tbilisi-/Face%20recognition' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/developer-guide' target=\"_blank\">docs</a>)<br>"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              " View project at <a href='https://wandb.ai/azhgh22-free-university-of-tbilisi-/Face%20recognition' target=\"_blank\">https://wandb.ai/azhgh22-free-university-of-tbilisi-/Face%20recognition</a>"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              " View run at <a href='https://wandb.ai/azhgh22-free-university-of-tbilisi-/Face%20recognition/runs/lxmyb8t0' target=\"_blank\">https://wandb.ai/azhgh22-free-university-of-tbilisi-/Face%20recognition/runs/lxmyb8t0</a>"
+            ]
+          },
+          "metadata": {}
+        }
+      ]
     }
   ],
   "metadata": {
