--- a/nn.ipynb
+++ b/nn.ipynb
@@ -1159,14 +1159,19 @@
         "            x = x.to(device=device)  # move to device, e.g. GPU\n",
         "            y = y.to(device=device)\n",
         "\n",
-        "            counter = np.zeros((BATCH_SIZE,N_CLASSES))\n",
+        "            # torch.zeros((BATCH_SIZE,N_CLASSES))\n",
+        "            counter = torch.zeros((len(y),N_CLASSES)).to(device)\n",
         "            for i in range(len(models)):\n",
         "              model.load_state_dict(models[i])\n",
         "              model.eval()\n",
         "              scores = model(x)\n",
         "              _, preds = scores.max(1)\n",
-        "              counter\n",
+        "              # preds = np.array(preds)\n",
+        "              counter[torch.arange(counter.size(0), device=device), preds] += 1\n",
         "\n",
+        "            preds = torch.argmax(counter, dim=1)\n",
+        "            # num_correct += (preds == y).sum()\n",
+        "            # num_samples += preds.size(0)\n",
         "\n",
         "        #     scores = model(x)\n",
         "        #     _, preds = scores.max(1)\n",
@@ -1178,33 +1183,30 @@
         "check_accuracy_bagging(val_loader,models,model)"
       ],
       "metadata": {
-        "id": "55osN2SO22ny",
-        "outputId": "6d4f40d4-3142-48a0-bf67-7a4306107b69",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "55osN2SO22ny",
+        "outputId": "ac562b76-00ff-472a-f1d4-46f3df45df9f"
       },
-      "execution_count": 28,
+      "execution_count": 35,
       "outputs": [
         {
-          "metadata": {
-            "tags": null
-          },
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Got 1981 / 4306 correct (46.01)\n"
           ]
         },
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "0.4600557361820715"
             ]
           },
-          "execution_count": 28,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 35
         }
       ]
     },
@@ -1244,12 +1246,12 @@
         "plt.savefig(\"train_loss.png\")"
       ],
       "metadata": {
-        "id": "rMifEUFU1hlv",
-        "outputId": "968d6982-b42b-4f4a-c2a0-330c5fd30948",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 994
-        }
+        },
+        "id": "rMifEUFU1hlv",
+        "outputId": "968d6982-b42b-4f4a-c2a0-330c5fd30948"
       },
       "execution_count": 16,
       "outputs": [
